--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Django==1.11.7
-asgiref==1.1.2
 asgi-redis==1.4.3
+asgiref==1.1.2
 channels==1.1.7
 Celery==3.1.20
 django-celery==3.2.2
@@ -13,15 +13,15 @@ python-magic==0.4.15
 django-storages==1.6.5
 PyNaCl==1.2.1
 pycparser==2.18
-pyasn1==0.4.2
+pyasn1==0.4.5
 ansible==2.3.3
 supervisor
 mysql-replication
 pymysql
-redis
+redis==2.10.6
 MySQL-python
 DBUtils
 xlrd
-chardet
-requests
+chardet==3.0.2
+requests==2.21.0
 xlwt
